[package]
name = "rrppcc"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple, incomplete, and experimental Rust RPC engine on high-performance unreliable transport. The ultimate goal is eRPC, but it is still far away."

authors = ["Jian Gao <icicle.flw@gmail.com>"]
repository = "https://github.com/IcicleF/rrppcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrddmma = { path = "../rrddmma" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
bitvec = "1.0"
thiserror = "1.0"
paste = "1.0"
log = "0.4.17"
libc = "0.2"
futures = "0.3"
local-ip-address = "0.5"
dashmap = "5.5"
crossbeam = "0.8"
ahash = "0.8"
quanta = "0.12"

[dev-dependencies]
simple_logger = { version = "4.2.0", features = ["threads"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["infiniband"]
infiniband = []
skip_safety_checks = []
