[package]
name = "rrppcc"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A high-performance userspace RDMA RPC engine."

authors = ["Jian Gao <icicle.flw@gmail.com>"]
repository = "https://github.com/IcicleF/rrppcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrddmma = "0.6"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
bitvec = "1.0"
thiserror = "1.0"
paste = "1.0"
log = "0.4.17"
libc = "0.2"
futures = "0.3"
local-ip-address = "0.6"
dashmap = "5.5"
crossbeam = "0.8"
ahash = "0.8"
quanta = "0.12"

[dev-dependencies]
simple_logger = { version = "4.2.0", features = ["threads"] }
tokio = { version = "1", features = ["full"] }
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "synchronous"
harness = false
